--- a/terraria.html
+++ b/terraria.html
@@ -1,41 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>terraria - Truffled</title>
-<style>
-html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    background: #000;
-}
-iframe {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    border: none;
-}
-#truffled-logo {
-    position: fixed;
-    bottom: 10px;
-    right: 10px;
-    width: 150px;
-    height: 150px;
-    cursor: pointer;
-    z-index: 9999;
-}
-</style>
+    <title>Launch Terraria</title>
+    <style>
+        body {
+            background: #111;
+            color: #fff;
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        button {
+            padding: 15px 25px;
+            font-size: 20px;
+            cursor: pointer;
+            border: none;
+            border-radius: 8px;
+            background: #4caf50;
+            color: white;
+        }
+        button:active {
+            transform: scale(0.97);
+        }
+    </style>
 </head>
 <body>
-<iframe src="https://tuffname.thepresenttraveller.com/games/terraria/index.html" allowfullscreen></iframe>
-<a href="https://education.vindavaktin.is" target="_blank">
-</a>
+    <button onclick="launch()">Launch Terraria</button>
 
+    <script>
+        function launch() {
+            window.open("https://tuffname.thepresenttraveller.com/games/terraria/index.html", "_blank");
+        }
+    </script>
 </body>
 </html>
